Bug 11434 - Cannot build ctdbpmda
Summary: Cannot build ctdbpmda
Status: RESOLVED FIXED
Alias: None
Product: CTDB 2.5.x or older
Classification: Unclassified
Component: ctdb (show other bugs)
Version: 4.3.0rc
Hardware: All Linux
: P5 normal
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-06 03:54 UTC by Amitay Isaacs
Modified: 2015-08-18 11:33 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-3 branch (1.01 KB, patch)
2015-08-07 07:35 UTC, Amitay Isaacs
martins: review+
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Amitay Isaacs 2015-08-06 03:54:18 UTC
[141/218] Compiling utils/pmda/pmda_ctdb.c
../utils/pmda/pmda_ctdb.c:543:1: error: no previous prototype for ‘pmda_ctdb_init’ [-Werror=missing-prototypes]
 pmda_ctdb_init(pmdaInterface *dp)
 ^
cc1: all warnings being treated as errors
Comment 1 Amitay Isaacs 2015-08-07 07:35:55 UTC
Created attachment 11320 [details]
Patch for v4-3 branch
Comment 2 Stefan Metzmacher 2015-08-17 16:09:28 UTC
Pushed to autobuild-v4-3-test
Comment 3 Stefan Metzmacher 2015-08-18 11:33:54 UTC
Pushed to v4-3-test